--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img id="tnw1"src="images/tnw1.png" alt="tnw1">
+        <img id="tnw1" src="images/tnw1.png" alt="tnw1">
         <div id="navContainer">
             <div class="navTop">
                 <ul>
@@ -24,7 +24,7 @@
                 </ul>
             </div>
             <div class="navBottom">
-                <img id="tnw2"src="images/tnw2.png" alt="tnw2">
+                <img id="tnw2" src="images/tnw2.png" alt="tnw2">
                 <ul>
                     <li><a href="#">LATEST</a></li>
                     <li><a href="#">HARD FORK</a></li>
@@ -151,7 +151,7 @@
                 </a>
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
-                <a class="seriesALink"href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
+                <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
             </article>
             <article class="subwellArticle">
                 <a href="#" class="grid-link">
@@ -162,7 +162,7 @@
                 </a>
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
-                <a class="seriesALink"href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
+                <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
             </article>
             <article class="subwellArticle">
                 <a href="#" class="grid-link">
@@ -173,9 +173,9 @@
                 </a>
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
-                <a class="seriesALink"href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
+                <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
             </article>
-            <article id="subwellLastArticle"class="subwellArticle">
+            <article id="subwellLastArticle" class="subwellArticle">
                 <a href="#" class="grid-link">
                     <img src="images/subwell.png" alt="subwell">
                     <p class="firstP">Subject Well</p>
@@ -184,7 +184,7 @@
                 </a>
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
-                <a class="seriesALink"href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
+                <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
             </article>
         </section>
         <section class="subjects">
@@ -200,7 +200,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
@@ -296,7 +296,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
@@ -320,7 +320,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
@@ -344,7 +344,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
@@ -368,7 +368,7 @@
                 </div>
                 <div class="img-2">
                     <figure>
-                        <img id="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
+                        <img class="womanDancing" src="images/back-img-2.jpg" alt="woman dancing">
                     </figure>
                     <p>LATEST</p>
                     <a href="#">Sorry, but you can't copyright a meme</a>
