Add index.html,delete image && rename image

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </figcaption>
                 </figure>
                 <figure class="latestNewsFig">
-                    <img src="images/iphone.jpg" alt="image">
+                    <img src="images/img-3.jpg" alt="image">
                     <figcaption>
                         <p class="latestNewsTitle"><strong>How to use Google to find podcast episodes on a specific topic</strong></p>
                         <p class="latestNewsAuthor">Mix - 29 minutes ago</p>
@@ -126,7 +126,7 @@
                         </figcaption>
                     </figure>
                     <figure class="latestNewsFig">
-                        <img src="images/iphone.jpg" alt="image">
+                        <img src="images/img-3.jpg" alt="image">
                         <figcaption>
                             <p class="latestNewsTitle"><strong>15 nations are reportedly banding together to monitor suspect cryptocurrency transfers</strong></p>
                             <p class="latestNewsAuthor">Mix - 29 minutes ago</p>
@@ -409,7 +409,7 @@
                 </figcaption>
             </figure>
             <figure class="latestNewsFig">
-                <img src="images/guy model.jpg" alt="image">
+                <img src="images/guy.jpg" alt="image">
                 <figcaption>
                     <p class="latestNewsTitle"><strong>How Billionaires, Icons, and World-Class Performers Master Productivity with Tim Ferriss</strong></p>
                     <p class="dealPrice"><span>$29</span> $19.99</p>
@@ -437,7 +437,7 @@
                 </figcaption>
             </figure>
             <figure class="latestNewsFig">
-                <img src="images/guy model.jpg" alt="image">
+                <img src="images/guy.jpg" alt="image">
                 <figcaption>
                     <p class="latestNewsTitle"><strong>How Billionaires, Icons, and World-Class Performers Master Productivity with Tim Ferriss</strong></p>
                     <p class="dealPrice"><span>$29</span> $19.99</p>
