Fixed Semantic Errors

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <li><a href="#">See more</a></li>
                 </ul>
             </div>
-            <article class="subwellArticle">
+            <div class="subwellArticle">
                 <a href="#" class="grid-link">
                     <img src="images/subwell.png" alt="subwell">
                     <p class="firstP">Subject Well</p>
@@ -152,8 +152,8 @@
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
                 <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
-            </article>
-            <article class="subwellArticle">
+            </div>
+            <div class="subwellArticle">
                 <a href="#" class="grid-link">
                     <img src="images/subwell.png" alt="subwell">
                     <p class="firstP">Subject Well</p>
@@ -163,8 +163,8 @@
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
                 <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
-            </article>
-            <article class="subwellArticle">
+            </div>
+            <div class="subwellArticle">
                 <a href="#" class="grid-link">
                     <img src="images/subwell.png" alt="subwell">
                     <p class="firstP">Subject Well</p>
@@ -174,8 +174,8 @@
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
                 <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
-            </article>
-            <article id="subwellLastArticle" class="subwellArticle">
+            </div>
+            <div id="subwellLastArticle" class="subwellArticle">
                 <a href="#" class="grid-link">
                     <img src="images/subwell.png" alt="subwell">
                     <p class="firstP">Subject Well</p>
@@ -185,7 +185,7 @@
                 <a class="pharmaLink1" href="#"><i class="fa fa-tag" aria-hidden="true"></i> Pharmaceuticals, +2</a>
                 <a class="pharmaLink2" href="#"><i class="fa fa-suitcase" aria-hidden="true"></i> Windham Venture Partners, +2</a>
                 <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
-            </article>
+            </div>
         </section>
         <section class="subjects">
             <article class="categories">
