--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
         </div>
     </nav>
-        <section class="top-content">
+        <div class="top-content">
             <article id="firstInsight">
-                <h1 class="FITitle">TNW</h1>
+                <h2 class="FITitle">TNW</h2>
                 <p class="FIDate">Friday - August 9, 2019</p>
                 <h2 class="FIH2">Researchers uncover a new piece of RAT malware that targets cryptocurrency users</h2>
                 <div class="FIAuthor">
@@ -72,7 +72,7 @@
                     <p class="FIP FIAPadding">0</p> 
                 </div>
             </article>
-        </section>
+        </div>
     <main>
         <section class="latestNews">
             <h2>Latest news</h2>
@@ -187,7 +187,7 @@
                 <a class="seriesALink" href="#">SubjectWell nabs $10 mln Series A <span>on PE Hub</span></a>
             </div>
         </section>
-        <section class="subjects">
+        <div class="subjects">
             <article class="categories">
                 <h2><a href="#">Apps > </a></h2>
                 <div class="back-img">
@@ -381,7 +381,7 @@
                     <li><a href="#">Harley-Davidson debuts its all-electric 'LiveWire' motorcycle at CES</a></li>
                 </ul> 
             </article>
-        </section>
+        </div>
         <section class="latestNews">
             <div class="latestDeals">
                 <h2><a href="#" class="h2Link">Latest deals > </a></h2>
